# streamlit-agent

./: .gitignore  README.md  llm_task_eng_abi.md  pyproject.toml
data/: .gitignore
data/md/: 2015_Stochastik_III.md  2015_Stochastik_IV.md  Eng_LK_21_part1.md
notebooks/: TA-9-2024-0138_DE_pre.md  TA-9-2024-0138_DE_utf8.md  load_abi_mathe.py  load_eu_ai_act.py  load_rvs_web_data.py
streamlit_agent/: chat_with_abi_math.py  chat_with_ai_act.py  chat_with_rvs_pages.py  rvs_Demo.py
