[tool.poetry]
name = "streamlit-agent"
version = "0.1.0"
description = ""
authors = ["Tim Conkling <tconkling@gmail.com>", "Joshua Carroll <joshua.carroll@snowflake.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "streamlit_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = ">=0.1.0"
openai = ">=1.6.1"
pypdf = ">=3.12.2"
sentence-transformers = ">=2.2.2"
torch = ">=2.0.0, !=2.0.1"
streamlit-feedback = ">=0.0.9"
langchain-experimental = ">=0.0.49"
streamlit = ">=1.26"
langchain-community = ">=0.0.12"
langchain-openai = ">=0.0.2.post1"
langchainhub = ">=0.1.14"
apify-client = ">=1.6.4"
build = "^1.1.1"
langchain-pinecone = "^0.0.3"
docx2txt = "^0.8"
lark = "^1.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
